@@ -1,6 +1,6 @@
 #
 # ovirt-host-deploy -- ovirt host deployer
-# Copyright (C) 2012-2013 Red Hat, Inc.
+# Copyright (C) 2012-2015 Red Hat, Inc.
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -17,23 +17,21 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #
 
-MAINTAINERCLEANFILES = \
-	$(srcdir)/Makefile.in \
-	$(NULL)
 
-SUBDIRS = \
-	core \
-	gluster \
-	kdump \
-	node \
-	openstack \
-	tune \
-	vdsm \
-	vdsmhooks \
-	vmconsole \
-	$(NULL)
+"""serial console plugin."""
 
-install-data-local:
-	$(MKDIR_P) "$(DESTDIR)$(otopiplugindir)"
-	rm -f "$(DESTDIR)$(otopiplugindir)/ovirt-host-deploy"
-	ln -s "$(ovirthostdeployplugindir)/ovirt-host-deploy" "$(DESTDIR)$(otopiplugindir)/ovirt-host-deploy"
+
+from otopi import util
+
+
+from . import packages
+from . import pki
+
+
+@util.export
+def createPlugins(context):
+    packages.Plugin(context=context)
+    pki.Plugin(context=context)
+
+
+# vim: expandtab tabstop=4 shiftwidth=4
