@@ -6,6 +6,7 @@ ovirt-host-deploy -- oVirt host deploy
    rhbz#1209418.
  * mgmt: new component to enable host management.
  * offline: pull iptables-services where available, rhbz#1224804.
+ * ovirt-vmconsole: initial add.
 
 2015-01-15 - Version 1.3.1
 
